# rtxel

./: -  .clang-format  .gitignore  Cargo.toml
.zed/: settings.json
libs/rtxel-client/: Cargo.toml
libs/rtxel-client/shaders/core/: aabb.slang  camera.slang  dda.slang  pathTracer.slang  ray.slang  rng.slang  traverser.slang  volume.slang  world.slang
libs/rtxel-client/shaders/passes/: draw.slang  present.slang  unpack.slang
libs/rtxel-client/src/: camera.rs  engine.rs  keyboard.rs  main.rs  start.rs
libs/rtxel-client/src/render/: compile.rs  debug.rs  draw.rs  frame.rs  gpu_world.rs  mod.rs  present.rs  slot_allocator.rs
libs/rtxel-client/src/render/unpack/: command.rs  mod.rs
libs/rtxel-client/src/world/: generator.rs  grid.rs  map.rs  mod.rs
libs/rtxel-core/: Cargo.toml
libs/rtxel-core/src/: keyboard.rs  lib.rs  mouse.rs  schedule.rs  start.rs  window.rs  world_ext.rs
libs/rtxel-game/: Cargo.toml  build.rs
libs/rtxel-game/shaders/: draw.slang  present.slang  traverse.slang  unpack.slang  world.slang
libs/rtxel-game/shaders/core/: aabb.slang  camera.slang  dda.slang  ray.slang  traverser.slang  volume.slang  world.slang
libs/rtxel-game/shaders/passes/: draw.slang  present.slang  unpack.slang
libs/rtxel-game/src/: camera.rs  lib.rs
libs/rtxel-game/src/render/: command.rs  gpu_world.rs  mod.rs  resources.rs  slot_allocator.rs
libs/rtxel-game/src/render/pipeline/: draw.rs  mod.rs  present.rs  shared.rs  unpack.rs
libs/rtxel-game/src/world/: brick_grid.rs  dda.rs  material.rs  mod.rs  voxel.rs
libs/rtxel-gpu/: Cargo.toml
libs/rtxel-gpu/src/: bind_group.rs  binding.rs  compute_pipeline.rs  dynamic_buffer.rs  lib.rs  render_pipeline.rs
libs/rtxel-render/: Cargo.toml  build.rs
libs/rtxel-render/shaders/: compute.slang  draw.slang
libs/rtxel-render/src/: lib.rs
libs/rtxel-render/src/base/: extract.rs  mod.rs  pipeline.rs  render.rs
libs/rtxel-slang/: Cargo.toml
libs/rtxel-slang/src/: lib.rs
