[package]
name = "rtxel-client"
version = "0.1.0"
edition = "2024"

[dependencies]
rtxel-gpu = { workspace = true }
wgpu = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }
glam = { version = "0.32.1", features = ["bytemuck"] }
egui = "0.34.2"
egui-wgpu = "0.34.2"
egui-winit = "0.34.2"
winit = "0.30.13"
pollster = "0.4.0"
env_logger = "0.11.10"
noise = "0.9"
rayon = "1.10"
